--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 :root {
     --bg-color: #dfdfdf;
     --text-color: #333;
-    --main-color: #1aadab;
+    --main-color: #13c9c6;
     --white-color: #fdfdfd;
     --bg-color2: #cbcbcb62;
     --shadow-color: rgba(0, 0, 0, 0.35);
