--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     --white-color: #fdfdfd;
     --bg-color2: #cbcbcb62;
     --shadow-color: rgba(0, 0, 0, 0.35);
-    --dark-color: #cae610;
+    --dark-color: #d2ba00;
     --bg-footer: #0b061f;
 }
 
@@ -113,7 +113,7 @@ header {
 }
 
 .header.sticky #darkMode-icon {
-    color: var(--main-color);
+    color: var(--dark-color);
     opacity: 0.9;
 }
 
@@ -903,15 +903,15 @@ span {
 
 .portfolio .portfolio-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 2.5rem;
+    gap: 4rem;
 }
 
 .portfolio-container .portfolio-box {
     position: relative;
     display: flex;
-    box-shadow: 0 0 1 rem rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1rem 3rem var(--shadow-color);
     overflow: hidden;
 }
 
@@ -1150,7 +1150,7 @@ span {
     background: var(--bg-color);
 }
 
-.form button{
+.elemento_btn_enviar input[type="submit"] {
     height: 40px;
     width: 50%;
     margin-left: 25%;
@@ -1164,12 +1164,11 @@ span {
     transition: all 0.2s ease;
     background: var(--main-color);
 }
-.form button:hover{
+/* .elemento_btn_enviar:hover{
     background: var(--main-color);
     color: var(--text-color);
     border: 2px solid var(--white-color);
-
-}
+} */
 .iconoform{
     position: relative;
     font-size: 2rem;
