--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2? family= Poppins:wght@300;400;500;600;700;800;900 & display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
 * {
     margin: 0;
@@ -8,26 +8,26 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
     user-select: none;
 }
 
 :root {
-    --bg-color: #dfdfdf;
-    --text-color: #333;
-    --main-color: #13c9b1;
+    --bg-color: #0b061f;
+    --text-color: #dfdfdf;
+    --main-color: #19b896;
     --white-color: #fdfdfd;
     --bg-color2: #cbcbcb62;
-    --shadow-color: rgba(0, 0, 0, 0.35);
     --dark-color: #d2ba00;
     --bg-footer: #0b061f;
+    --shadow-color: rgba(255, 255, 255, 0.35);
 }
 
 .dark-mode {
-    --bg-color: #0b061f;
-    --text-color: #dfdfdf;
-    --main-color: #11d0de;
-    --shadow-color: rgba(255, 255, 255, 0.35);
+    --bg-color: #d2d2d2;
+    --text-color: #333;
+    --main-color: #13c9a2;
+    --shadow-color: rgba(0, 0, 0, 0.35);
 }
 
 html {
@@ -77,8 +77,8 @@ header {
 .navbar a {
     position: relative;
     font-size: 1.7rem;
-    color: var(--white-color);
-    font-weight: 500;
+    color: var(--bg-color);
+    font-weight: 600;
     margin-right: 3rem;
 }
 
@@ -495,11 +495,11 @@ span {
     max-width: 45rem;
     position: relative;
     background: var(--bg-color);
-    border-radius: 8px;
+    border-radius: 6px;
     margin: 20px 0;
     transition: all 0.3s ease;
-    box-shadow: 10px 10px 20px var(--shadow-color);
-    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 5px 5px 10px var(--shadow-color);
+    background: rgba(255, 255, 255, 0.068);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(40px);
@@ -521,7 +521,7 @@ span {
     width: 100%;
     object-fit: cover;
     border-radius: 50%;
-    border: 3px solid var(--bg-color);
+    border: 1px solid var(--bg-color);
 }
 
 .card__nosotros::before{
@@ -531,7 +531,7 @@ span {
     height: 45%;
     width: 100%;
     background: var(--main-color);
-    border-radius: 8px 8px 0 0;
+    border-radius: 6px 6px 0 0;
 }
 .card__nosotros .card__contenido{
     display: flex;
@@ -553,7 +553,7 @@ span {
 .media__icons i{
     font-size: 1.6rem;
     color: var(--white-color);
-    opacity: 0.7;
+    opacity: 0.8;
     margin-top: 10px;
     transition: all 0.3s ease;
     cursor: pointer;
@@ -891,6 +891,8 @@ span {
     margin: 1rem 0 3rem;
 }
 
+
+
 /*portfolio*/
 
 .portfolio {
@@ -903,15 +905,16 @@ span {
 
 .portfolio .portfolio-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 50rem), 1fr));
     align-items: center;
     gap: 4rem;
+    padding: 0 2rem;
 }
 
 .portfolio-container .portfolio-box {
     position: relative;
     display: flex;
-    box-shadow: 0 1rem 3rem var(--shadow-color);
+    box-shadow: 1px 1px 30px -5px var(--main-color); 
     overflow: hidden;
 }
 
@@ -930,7 +933,7 @@ span {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.1), var(--main-color));
+    background: linear-gradient(rgba(0, 0, 0, 0.478), var(--main-color));
     color: var(--white-color);
     display: flex;
     justify-content: center;
@@ -969,6 +972,46 @@ span {
     font-size: 2rem;
     color: #333;
 }
+
+.container__portafolio__paginas{
+    width: 80%;
+    margin: auto;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 50rem), 1fr));
+    gap: 3rem;
+
+
+}
+.container__pag__portafolio{
+    background: var(--bg-color);
+    /* border: 2px solid var(--main-color); */
+    padding: 1rem;
+}
+.container__pag__portafolio .box__img__pag{
+    width: 100%;
+    height: 42rem;
+    overflow: hidden;
+}
+.box__img__pag:hover img{
+    transform: translateY(-90%);
+}
+.box__img__pag img{
+    transition: 16s all;
+    width: 100%;
+}
+.container__pag__portafolio h2{
+    padding: 1rem;
+    color: var(--bg-color);
+    font-size: 3.4rem;
+    background: var(--main-color);
+}
+.container__pag__portafolio p{
+    color: var(--text-color);
+    font-size: 2rem;
+}
+
+
 
 /*testimonial-container*/
 
